@@ -15,6 +15,7 @@ Currency
 Currency Exchange Cell
 Currency Exchange Line
 Currency Module
+Day Movement Group
 Delivery Builder
 Delivery Causality Assignment Movement Group
 Delivery Tool
