@@ -1,3 +1,6 @@
+2008-12-17 nicolas
+* add Day Movement Group portal_type
+
 2008-12-02 rafael
 * Disable Acquire Local Roles in Credit Cards (as done in Bank Account)
 
